[package]
name = "CheckPlz"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.


[dependencies]
clap = { version = "4.0", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "fileapi", "handleapi"] }
widestring = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
rand = "0.8"
